# LLM-From-Scratch

./: .gitignore  README.md  pyproject.toml  setup.py
apps/: chatbot.py
csrc/: pybind.cpp
csrc/layer/: linear.cu  linear.h
llmfs/csrc/layer/: linear.cu
llmfs/model/: llama.py  transformer.py
llmfs/module/: attention.py  embedding.py  feedforward.py  ngram.py  norm.py  pe.py  token.py
module/: attention.py  embedding.py  token.py
test/model/: test_transformer.py
test/module/: test_attention.py  test_pe.py  test_token.py
