[build-system]
requires = [
    "setuptools>=61.0",
    "numpy",
    "torch"
]
build-backend = "setuptools.build_meta"

[project]
name = "llmfs"
version = "0.0.1"
description = ""
authors = ["Chris Zhang <chrisly.zhang@outlook.com>"]
readme = "README.md"
requires-python = ">=3.8"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"